# ai-wallet

./: .env.example  Cargo.toml  README.md
docs/: api.md  architecture.md
src/: api.rs  audit.rs  auth.rs  broadcast.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  service.rs  signer_rpc.rs
